fix: Add missing z-index for base-toasts

--- a/projects/ng-base/base-components/components/toast/toast.component.scss
+++ b/projects/ng-base/base-components/components/toast/toast.component.scss
@@ -1,6 +1,11 @@
+:host {
+  --base-toast-z-index: 999;
+}
+
 .toast-wrapper {
   position: fixed;
   padding: 10px;
+  z-index: var(--base-toast-z-index);
 }
 
 .bottom-right {
